--- a/trans3/trans3.vcproj
+++ b/trans3/trans3.vcproj
@@ -175,7 +175,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="ddraw.lib dxguid.lib msimg32.lib odbc32.lib odbccp32.lib dinput8.lib winmm.lib strmiids.lib zlib.lib audiere.lib FreeImaged.lib dsound.lib gdiplus.lib"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\Lib\Debug\;&quot;$(DXSDK_DIR)Lib\x86&quot;"
+				AdditionalLibraryDirectories="..\Lib\Debug;&quot;$(DXSDK_DIR)Lib\x86&quot;"
 				IgnoreDefaultLibraryNames="LIBC;"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
